  * Fix bug #1008562: New network parameters not sent to server. This bug is related to bug #1015434. 
  * Fix bug #820209: Add Windows firewall rules for OCS Inventory NG, only if firewall is enabled
  * Fix bug #1021367: Set Max Error allowed to 5 consecutive errors instead of 30, and also uses this parameter into package execution. Package will return ERR_EXECUTE_PACK if execution fails more then MAX_ERROR_COUNT set to 5. Also uses a timeout into command execution (default 120 minutes)
  * Fix big #1015434 : Try to also search for package ID file in installer parent directory
  * Avoid sending ERR_ALREADY_SETUP after agent upgrade using deployement. This is done by movng agent's setup result code file to package directory
  * Fix bug #1028353: Add EDID code FUJ, TOS, MS_, NVD, END, CPT, LGD et LEN for EDID monitor  
  * Fix bug #948155: Validation message popup are not localized in english, german, spanish and french
  * Fix bug #929549: By default, server authentication not required unless user or proxy option specified, and proxy authentication not required unless proxy_user or proxy_pwd option specified
  * Fix bug #943182: Copying History file from <$INSTDIR\download> to <$APPDATA\OCS Inventory NG\Agent>
  * Fix bug #948172: Validation message popup comes up in foreground, but not activated
  * Bug #966320: Disable redirection immediately prior to the native API function call if compiled for Windows XP or higher. However, agent 2.0 supports Windows 2000, and this fix only apply if compiled without Windows 2000 support, but only Windows XP or higher support.        
  * Fix bug #1024077: Agent ensure package timestamp does not exist before creating it, and delete package directory if expired before launching package download and setup tool
  * Fix bug #1021497: Stop downloading if 2/3 of fragment download fail, and wait for next agent launch